fix header background transparent issue on IE.

--- a/assets/themes/twitter/css/style.scss
+++ b/assets/themes/twitter/css/style.scss
@@ -28,6 +28,8 @@ footer p {
 }
 .navbar-top .navbar-inner {
   background-color: transparent;
+  background: transparent;
+  filter: none;
   border: 0;
 
   .navbar-container {
